fixed about-me position on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,11 @@
   margin-top: 5px;
 }
 
-.float-right {
-  float: right;
+.right-pos {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 10px;
 }
 
 .project-header {
@@ -1692,6 +1695,7 @@ pre code {
   }
 }
 .container-fluid {
+  position: relative;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
